# second_round

./: .gitignore  FILES_TO_EDIT.md  README.md  pyproject.toml
demo_out_test/: input.jsonl  output.jsonl
pose_smooth/: __init__.py  __main__.py  cli.py  config.py  synth.py  types.py
pose_smooth/filters/: __init__.py  ema.py
pose_smooth/io/: __init__.py  jsonl.py
pose_smooth/metrics/: __init__.py  jitter.py
scripts/: make_synth_dataset.py
tests/: test_ema_smoothing.py  test_io_roundtrip.py  test_metrics.py
