[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pose-smooth"
version = "0.1.0"
description = "Intern starter: temporal smoothing for 2D pose keypoints"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Intern Assignment" }]
dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
pose-smooth = "pose_smooth.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pose_smooth*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
